# Sentrix-Real-Time-Social-Media-Sentiment-Feed

./: .gitignore  README.md  SETUP.md  package-lock.json
backend/: README.md
backend/filtering-service-b/: .dockerignore  .env.example  .env.local.example  .env.railway.example  Dockerfile  README.md  pyproject.toml  requirements.docker.txt
backend/filtering-service-b/src/filtering_service_b/: main.py
backend/filtering-service-b/src/filtering_service_b/config/: settings.py
backend/filtering-service-b/src/filtering_service_b/manipulation/: __init__.py  hamming.py  repetition_scorer.py  simhash.py
backend/filtering-service-b/src/filtering_service_b/messaging/: kafka_consumer.py  kafka_producer.py  schemas.py
backend/filtering-service-b/src/filtering_service_b/novelty/: __init__.py  novelty_scorer.py
backend/filtering-service-b/src/filtering_service_b/observability/: logging.py  rolling_metrics.py
backend/filtering-service-b/src/filtering_service_b/pipeline/: processor.py
backend/filtering-service-b/src/filtering_service_b/relevance/: __init__.py  context_terms.py  embedding_base.py  embedding_service.py  relevance_scorer.py  ticker_profiles.py
backend/filtering-service-b/src/filtering_service_b/resources/: tickers.json
backend/filtering-service-b/src/filtering_service_b/state/: author_state_store.py  burst_store.py  novelty_state_store.py  redis_client.py  ticker_state_store.py
backend/filtering-service-b/tests/unit/: test_cross_user_repetition_scorer.py  test_manipulation_utils.py  test_novelty_scorer.py  test_processor_phase3.py  test_processor_phase4.py  test_processor_phase5.py  test_processor_phase6.py  test_relevance_scorer.py
backend/sentiment-service/: .env.local.example  .env.railway.example  README.md  pyproject.toml
backend/sentiment-service/src/: event-level-score-result.json  hourly-level-score-result.json  main.py
backend/sentiment-service/src/demo_data/: ticker-events-data.json  ticker_sentiment_hourly.json
backend/sentiment-service/src/sentiment_service/: .env_template  Event_level_score.py  Hour_level_score.py  Ticker_level_score.py  demo_file_parser.py  llm_connector.py  main.py  runner.py
backend/sentiment-service/src/sentiment_service/api/: app.py  routes.py
backend/sentiment-service/src/sentiment_service/app/: __init__.py  finnhub.py  service_app.py
backend/sentiment-service/src/sentiment_service/clients/: __init__.py  finnhub_client.py
backend/sentiment-service/src/sentiment_service/config/: finnhub_companies.json  settings.py  volatility.json
backend/sentiment-service/src/sentiment_service/demo/: __init__.py  file_parser.py  runner.py  service.py
backend/sentiment-service/src/sentiment_service/demo_data/: ticker_sentiment_hourly.json
backend/sentiment-service/src/sentiment_service/domain/: aggregation.py  models.py  scoring.py  signal_keywords.py  signal_stub.py
backend/sentiment-service/src/sentiment_service/finbert_testing/: filtering-results-str.txt  finbert_result_test.json
backend/sentiment-service/src/sentiment_service/keywords/: __init__.py  base.py  embedding_base.py  embedding_service.py  factory.py  keybert_extractor.py  lexical_extractor.py  normalizer.py  pipeline.py  refiner.py
backend/sentiment-service/src/sentiment_service/messaging/: adapters.py  kafka_consumer.py  schemas.py
backend/sentiment-service/src/sentiment_service/objects/: objects.py
backend/sentiment-service/src/sentiment_service/storage/: hourly_repo.py  mongo_client.py  price_correlation_repo.py  signal_repo.py
backend/sentiment-service/src/sentiment_service/utils/: time.py
backend/sentiment-service/test/: test_aggregation.py  test_keywords.py  test_scoring_stub.py  test_ticker_level.py  test_time_bucketing.py
(+572 files in other folders)
