[project]
name = "sentiment-service"
version = "0.1.0"
description = ""
authors = [
    {name = "wasiflatifhussain"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka (>=2.12.2,<3.0.0)",
    "pymongo[srv] (>=4.15.5,<5.0.0)",
    "huggingface-hub (>=0.34.0,<1.0.0)",
    "keybert (>=0.9.0,<1.0.0)",
    "openai (>=1.109.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "fastapi (>=0.127.0,<0.128.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]

[tool.poetry]
packages = [{ include = "sentiment_service", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
fixable = ["ALL"]

[tool.poetry]
packages = [{ include = "sentiment_service", from = "src" }]
